--- a/static/assets/css/foodhut.css
+++ b/static/assets/css/foodhut.css
@@ -272,6 +272,7 @@ button,
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+
 }
 
 button:not(:disabled),
@@ -366,16 +367,26 @@ template {
   display: none !important;
 }
 
+
+@font-face {
+  font-family: 'Night'; /* Give your font a name */
+  src: url('nightingale.regular.otf') format('opentype'); /* Path to your .otf file */
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Oswald", sans-serif;
+  font-family:Nightingale;
   font-weight: 500;
   line-height: 1.2;
 }
 
 h1, .h1 {
   font-size: 3rem;
+
 }
 
 h2, .h2 {
