--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -44,7 +44,7 @@
                 </ul>
                 <a class="navbar-brand m-auto" href="#">
                     <img src="{% static 'assets/imgs/logo.png' %}" class="brand-img" alt="Logo de Mamma Mia">
-                    <span class="brand-txt">Mamma mia</span>
+                    <span class="brand-txt">Mamma mia!</span>
                 </a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -89,9 +89,9 @@
         </div>
 
         <!-- Pizza Base Section -->
-        <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
+        <div id="gallary" class="container-fluid has-bg-overlay-gray text-center text-light has-height-lg middle-items">
             <h2 class="section-title">NUESTRAS MASAS</h2>
-        </div>
+        </div> 
         <div class="gallary row">
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
                 <img src="{% static 'assets/imgs/gallary-1.jpg' %}" alt="Foto de masa 1" class="gallary-img">
@@ -120,7 +120,7 @@
         </div>
 
         <!-- Ingredients Section -->
-        <div id="ingredients" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
+        <div id="ingredients" class="container-fluid has-bg-overlay-gray text-center text-light has-height-lg middle-items">
             <h2 class="section-title">NUESTROS INGREDIENTES</h2>
         </div>
         <div class="gallary row">
