--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -96,25 +96,25 @@
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
                 <img src="{% static 'assets/imgs/gallary-1.jpg' %}" alt="Foto de masa 1" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Masa fina</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
                 <img src="{% static 'assets/imgs/gallary-2.jpg' %}" alt="Foto de masa 2" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Masa original</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
                 <img src="{% static 'assets/imgs/gallary-3.jpg' %}" alt="Foto de masa 3" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Masa con queso</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-                <img src="{% static 'assets/imgs/gallary-4.jpg' %}" alt="Foto de masa 4" class="gallary-img">
+                <img src="{% static 'assets/imgs/gluten.jpg' %}" alt="Foto de masa 4" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Masa sin gluten</span>
                 </a>
             </div>
         </div>
@@ -125,27 +125,52 @@
         </div>
         <div class="gallary row">
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-                <img src="{% static 'assets/imgs/gallary-1.jpg' %}" alt="Ingrediente 1" class="gallary-img">
+                <img src="{% static 'assets/imgs/pepperoni.jpg' %}" alt="Ingrediente 1" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Pepperoni</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-                <img src="{% static 'assets/imgs/gallary-2.jpg' %}" alt="Ingrediente 2" class="gallary-img">
+                <img src="{% static 'assets/imgs/guanciale.jpg' %}" alt="Ingrediente 2" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Guanciale</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-                <img src="{% static 'assets/imgs/gallary-3.jpg' %}" alt="Ingrediente 3" class="gallary-img">
+                <img src="{% static 'assets/imgs/pesto.jpg' %}" alt="Ingrediente 3" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Pesto</span>
                 </a>
             </div>
             <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-                <img src="{% static 'assets/imgs/gallary-4.jpg' %}" alt="Ingrediente 4" class="gallary-img">
+                <img src="{% static 'assets/imgs/trufas.jpg' %}" alt="Ingrediente 4" class="gallary-img">
                 <a href="#" class="gallary-overlay">
-                    <i class="gallary-icon ti-plus"></i>
+                    <span class="h3 white">Trufas</span>
+                </a>
+            </div>
+            <div class="gallary row">
+            <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+                <img src="{% static 'assets/imgs/parmigiano.jpg' %}" alt="Ingrediente 1" class="gallary-img">
+                <a href="#" class="gallary-overlay">
+                    <span class="h3 white">Parmigiano Reggiano</span>
+                </a>
+            </div>
+            <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+                <img src="{% static 'assets/imgs/mozzarella.jpg' %}" alt="Ingrediente 2" class="gallary-img">
+                <a href="#" class="gallary-overlay">
+                    <span class="h3 white">Mozzarella</span>
+                </a>
+            </div>
+            <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+                <img src="{% static 'assets/imgs/setas.jpg' %}" alt="Ingrediente 3" class="gallary-img">
+                <a href="#" class="gallary-overlay">
+                    <span class="h3 white">Setas</span>
+                </a>
+            </div>
+            <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+                <img src="{% static 'assets/imgs/aceitunas.jpg' %}" alt="Ingrediente 4" class="gallary-img">
+                <a href="#" class="gallary-overlay">
+                    <span class="h3 white">Aceitunas</span>
                 </a>
             </div>
         </div>
