--- a/static/assets/css/foodhut.css
+++ b/static/assets/css/foodhut.css
@@ -48,6 +48,13 @@
   box-sizing: border-box;
 }
 
+
+  .white{
+
+  color: white !important;;
+}
+
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
