--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#about">Acerca de nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallary">Pizzas</a>
+                        <a class="nav-link" href="#gallary">Nuestra selección</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#book-table">Reservar mesa</a>
@@ -203,28 +203,28 @@
             <div class="row mt-3 mb-5">
                 <div class="col-md-4 my-3 my-md-0">
                     <div class="testmonial-card">
-                        <h3 class="testmonial-title">John Doe</h3>
-                        <h6 class="testmonial-subtitle">Web Designer</h6>
+                        <h3 class="testmonial-title">Pinno Prestanizzi</h3>
+                        <h6 class="testmonial-subtitle">Pizzero</h6>
                         <div class="testmonial-body">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                            <p>Le doy un treh sobre treh.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 my-3 my-md-0">
                     <div class="testmonial-card">
-                        <h3 class="testmonial-title">Steve Thomas</h3>
-                        <h6 class="testmonial-subtitle">UX/UI Designer</h6>
+                        <h3 class="testmonial-title">Gordon Ramsay</h3>
+                        <h6 class="testmonial-subtitle">Michelin star chef</h6>
                         <div class="testmonial-body">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
+                            <p>La masa estaba cruda, ¡Malditamente cruda!. Pero en relidad me ha gustado bastante. 9/10 </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 my-3 my-md-0">
                     <div class="testmonial-card">
-                        <h3 class="testmonial-title">Miranda Joy</h3>
-                        <h6 class="testmonial-subtitle">Graphic Designer</h6>
+                        <h3 class="testmonial-title">Constanza Vanucci</h3>
+                        <h6 class="testmonial-subtitle">Abuela Italiana</h6>
                         <div class="testmonial-body">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
+                            <p>¡Pizza riquisima como en mi querida Italia!</p>
                         </div>
                     </div>
                 </div>
@@ -239,11 +239,9 @@
                 </div>
                 <div class="col-md-6 px-5 has-height-lg middle-items">
                     <h3>ENCUENTRANOS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laboriosam doloremque odio delectus, sunt magnam laborum impedit molestiae, magni quae ipsum, ullam eos! Alias suscipit impedit et, adipisci illo quam.</p>
+                    <p>¡Descubre nuestra pizzería en el corazón de San Sebastián! Ubicados en una zona privilegiada, te ofrecemos un ambiente acogedor y familiar, ideal para disfrutar de deliciosas pizzas. Ven a visitarnos y déjate sorprender por nuestros sabores únicos, perfectos para compartir con amigos y familiares. ¡Te esperamos para que vivas una experiencia culinaria inolvidable!</p>
                     <div class="text-muted">
-                        <p><span class="ti-location-pin pr-3"></span> 12345 Fake ST NoWhere, AB Country</p>
-                        <p><span class="ti-support pr-3"></span> (123) 456-7890</p>
-                        <p><span class="ti-email pr-3"></span> info@website.com</p>
+                        <p><span class="ti-location-pin pr-3"></span> C. Inés Diego de Noval, 39, 39012 Santander, Cantabria</p>
                     </div>
                 </div>
             </div>
@@ -253,16 +251,17 @@
         <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
             <div class="row">
                 <div class="col-sm-4">
-                    <h3>ENVIANOS UN MAIL</h3>
-                    <p class="text-muted">info@website.com</p>
+                    <h3>VISITANOS</h3>
+                    <p class="text-muted">Lunes ~ Jueves (12:30-22:00) </p>
+                    <p class="text-muted">Viernes ~ Sabado (12:30-00:00) </p>
                 </div>
                 <div class="col-sm-4">
                     <h3>LLAMANOS</h3>
-                    <p class="text-muted">(123) 456-7890</p>
+                    <p class="text-muted">942 39 22 40</p>
                 </div>
                 <div class="col-sm-4">
                     <h3>ENCUENTRANOS</h3>
-                    <p class="text-muted">12345 Fake ST NoWhere AB Country</p>
+                    <p class="text-muted">C. Inés Diego de Noval, 39, 39012 Santander, Cantabria</p>
                 </div>
             </div>
         </div>
