--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="../#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">Acerca de nosotros</a>
@@ -71,7 +71,7 @@
         {% endblock %}
 
         <!-- Page Footer -->
-        <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
+        <br><div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
             <div class="row">
                 <div class="col-sm-4">
                     <h3>VISITANOS</h3>
