--- a/appMammaMia/templates/index.html
+++ b/appMammaMia/templates/index.html
@@ -37,13 +37,13 @@
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/gallary-1.jpg' %}" alt="Foto de masa 1" class="gallary-img">
-            <a href="pizzas.html" class="gallary-overlay">
+            <a href="{% url 'pizzas' 'fina' %}" class="gallary-overlay">
                 <span class="h3 white">Masa fina</span>
             </a>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="{% static 'assets/imgs/gallary-2.jpg' %}" alt="Foto de masa 2" class="gallary-img">
-            <a href="pizzas.html" class="gallary-overlay">
+            <a href="{% url 'pizzas' 'original' %}" class="gallary-overlay">
                 <span class="h3 white">Masa original</span>
             </a>
         </div>
