--- a/appMammaMia/templates/pizzas.html
+++ b/appMammaMia/templates/pizzas.html
@@ -3,12 +3,21 @@
 {% block title%} Pizzas masa X {%endblock%}
 
 {% block content %}
-<br><br><br>
-<h1>Tipos de Masas</h1>
-    <ul>
-        {% for masa in masas %}
-            <li>{{ masa.nombre }}</li>
-        {% endfor %}
-    </ul>
+<h1>Pizzas con masa: {{ masa.nombre }}</h1>
+    {% if pizzas %}
+        <ul>
+            {% for pizza in pizzas %}
+                <li>{{ pizza.nombre }} - Precio: {{ pizza.precio }}</li>
+                <p>Ingredientes:</p>
+                <ul>
+                    {% for ingrediente in pizza.ingredientes.all %}
+                        <li>{{ ingrediente.nombre }}</li>
+                    {% endfor %}
+                </ul>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No hay pizzas disponibles con esta masa.</p>
+    {% endif %}
 
 {%endblock%}
