--- a/appMammaMia/templates/base.html
+++ b/appMammaMia/templates/base.html
@@ -15,6 +15,8 @@
         <!-- font icons -->
         <link rel="stylesheet" href="{% static 'assets/vendors/themify-icons/css/themify-icons.css' %}">
         <link rel="stylesheet" href="{% static 'assets/vendors/animate/animate.css' %}">
+        <link rel="icon" href="{% static '\assets\imgs\logo.png' %}" type="image/x-icon">
+
 
         <!-- Bootstrap + FoodHut main styles -->
         <link rel="stylesheet" href="{% static 'assets/css/foodhut.css' %}">
@@ -33,19 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../#home">Home</a>
+                        <a class="nav-link" href="/#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Acerca de nosotros</a>
+                        <a class="nav-link" href="/#about">Acerca de nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallary">Nuestra selección</a>
+                        <a class="nav-link" href="/#gallary">Nuestra selección</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#book-table">Reservar mesa</a>
+                        <a class="nav-link" href="/#book-table">Reservar mesa</a>
                     </li>
                 </ul>
-                <a class="navbar-brand m-auto" href="#">
+                <a class="navbar-brand m-auto" href="/index.html">
                     <img src="{% static 'assets/imgs/logo.png' %}" class="brand-img" alt="Logo de Mamma Mia">
                     <span class="brand-txt">Mamma mia!</span>
                 </a>
